# mind-games-project

./: .gitignore  Makefile  README.md  pyproject.toml
mind_games/scripts/: cli.py  engine.py  supp.py
mind_games/scripts/games/: arithmetic_progression.py  calculate.py  gcd.py  geometric_progression.py  prime.py
