[tool.poetry]
name = "mind-games"
version = "0.1.0"
description = ""
authors = ["egortrod <egor.arkhipoff@yandex.ru>"]
readme = "README.md"
packages = [{include = "mind_games"}]

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.scripts]
mind-games = "mind_games.scripts.engine:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
